# recast-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.MIT  README.md
recast-sys/: Cargo.toml  build.rs
recast-sys/include/: detour.h  detour_crowd.h  recast.h
recast-sys/src/: detour.cpp  lib.rs  recast.cpp
src/: compact_heightfield.rs  context.rs  contour_set.rs  heightfield.rs  lib.rs  macros.rs  mesh.rs  navmesh_data.rs  poly_mesh.rs  poly_mesh_detail.rs
src/detour/: mod.rs
src/recast/: context.rs  mesh.rs  mod.rs  navmesh_data.rs  poly_mesh.rs  poly_mesh_detail.rs
