[package]
name = "recast-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["detour_crowd", "recast"]

detour = ["recast-sys/detour"]
detour_crowd = ["detour", "recast-sys/detour_crowd"]
recast = ["recast-sys/recast"]

[workspace]
members = ["./recast-sys"]

[dependencies]
cxx = "1.0"
recast-sys = { path = "./recast-sys", default-features = false }
thiserror = "2.0"
